--- a/作業3.html
+++ b/作業3.html
@@ -74,7 +74,7 @@
 </style>
 </head>
 <body>
-    <center> <a href="index.html_首頁.html">回首頁</a>
+    <center> <a href="首頁.html">回首頁</a>
 
 <div id="header">
 header
