--- a/首頁.html
+++ b/首頁.html
@@ -11,9 +11,9 @@
     黃映晴<br>
     1110932009<br>
     <hr>
-    <a href="作業1.html">作業一</a>
-   <br><a href="作業2.html">作業二</a>
-   <br><a href="作業3.html">作業三</a>
+    <a href="作業1.html">作業一</a><br>
+    <a href="作業2.html">作業二</a><br>
+    <a href="作業3.html">作業三</a>
     
 </body>
 </html>
