--- a/index.html_首頁.html
+++ b/index.html_首頁.html
@@ -43,7 +43,7 @@
     <a href="index.html_1110932009.html">作業一</a>
    <br><a href="index.html_1110932009(2).html">作業二</a>
    <br><a href="1110932009333.html">作業3</a>
-   <br><a href="期中考.html">期中考</a>
+   <br><a href="專題網站.html">專題網站</a>
 </body>
 </html>
 
