--- a/index.html_首頁.html
+++ b/index.html_首頁.html
@@ -3,14 +3,22 @@
 <head> 
 <meta charset="utf-8"> 
 <title>首頁</title>
+<link rel="stylesheet" type="text/css" href="style.css">
 
 
 </head>
 <body>
-   <div class="table">
+   <div class="content">
+    <h1>Welcome</h1>
+    <h3>This is my github 首頁</h3>
+    <p>*********************************************</p>
+</div>
+</body>
+
         <table>
+           
             <caption>
-               我的個人首頁 <br>
+                <br>
                
             </caption>
             <thead>
