--- a/index.html_首頁.html
+++ b/index.html_首頁.html
@@ -85,6 +85,7 @@
    <br><a href="index.html_1110932009(2).html">作業二</a>
    <br><a href="1110932009333.html">作業3</a>
    <br><a href="專題網站.html">專題網站</a>
+   <br><a href="index.html_11110932009(4).html">作業六(新九九乘法表)</a>
 </body>
 </html>
 
